--- a/application/index/view/public/tpl/top.html
+++ b/application/index/view/public/tpl/top.html
@@ -1,1 +1,13 @@
-<h1>this is top</h1>
+<div class="weui_navbar dream-header">
+    <a href="javascript:history.go(-1);;" class="dream-header-left"><img
+            src="__STATIC__/img/back@2x.png" style="height: 100%;"
+    ></a>
+    <div class="dream-header-middle">
+        [title]
+    </div>
+    <a href="javascript:;" style="display: none">
+        <div class="dream-header-right">
+            <span>收藏职位</span>
+        </div>
+    </a>
+</div>
