--- a/application/index/view/user/index.html
+++ b/application/index/view/user/index.html
@@ -2,39 +2,36 @@
 
 <div class="weui-navbar dream-header">
     <div class="dream-header-middle">
-        心愿池
+        个人中心
     </div>
 </div>
 
 <div class="weui-tab">
     <div class="dream-list-container">
-        <!--<div class="weui-tab__bd-item  weui-tab__bd-item&#45;&#45;active">-->
-            <div id="dream_list">
-            </div>
-            <div class="weui-loadmore">
-                <i class="weui-loading"></i>
-                <span class="weui-loadmore__tips">正在加载</span>
-            </div>
-        <!--</div>-->
-
+        <div id="dream_list">
+        </div>
+        <div class="weui-loadmore">
+            <i class="weui-loading"></i>
+            <span class="weui-loadmore__tips">正在加载</span>
+        </div>
 
     </div>
 
 
     <div class="weui-tabbar" style="position: fixed;bottom: 0;right: 0;left: 0">
-        <a href="javascript:;" class="weui-tabbar__item weui-bar__item--on">
+        <a href="{:url('dream/poll')}" class="weui-tabbar__item ">
             <div class="weui-tabbar__icon">
                 <img src="__STATIC__/img/icon_nav_button.png" alt="">
             </div>
             <p class="weui-tabbar__label">心愿池</p>
         </a>
-        <a href="{:url('dream/sheet')}" class="weui-tabbar__item">
+        <a href="{:url('dream/sheet')}" class="weui-tabbar__item ">
             <div class="weui-tabbar__icon">
                 <img src="__STATIC__/img/icon_nav_icons.png" alt="">
             </div>
             <p class="weui-tabbar__label">心愿单</p>
         </a>
-        <a href="{:url('user/index')}" class="weui-tabbar__item">
+        <a href="javascript:;" class="weui-tabbar__item weui-bar__item--on">
             <div class="weui-tabbar__icon">
                 <img src="__STATIC__/img/icon_nav_cell.png" alt="">
             </div>
@@ -66,7 +63,7 @@
 
         function getDreamList(page = 1, pageSize = 10) {
             $ajax(
-                "{:url('dream/getPolls')}",
+                "{:url('dream/getSheet')}",
                 {'page': page, 'pageSize': pageSize},
                 false,
                 function (res) {  //成功
@@ -120,56 +117,56 @@
     });
 
 
-        $(".dream-fabu-btn").on('click', function () {
-            location.href = "{:url('dream/publish')}"
+    $(".dream-fabu-btn").on('click', function () {
+        location.href = "{:url('dream/publish')}"
+    });
+
+    /* @author:yangqihua
+     * 动态点赞
+     * 此效果包含css3，部分浏览器不兼容（如：IE10以下的版本）
+     */
+    $(function () {
+        $("#dream_list").on('click', '.praise', function () {
+            var _this = $(this);
+            var praise = _this.parent().parent().parent();
+
+            var praise_img = $(_this.children().get(0));
+            var praise_txt = $(_this.children().get(1));
+            var text_box = $(_this.children().get(2));
+            var num = parseInt(praise_txt.text());
+            if (praise_img.attr("src") == ("__STATIC__/img/vote.png")) {
+                $ajax(
+                    "{:url('dream/upvote')}",
+                    {'dreamId': praise.attr("id")},
+                    false,
+                    function (res) {  //成功
+                        praise_img.replaceWith("<img src='__STATIC__/img/unvote.png' class='praise-img' class='animation' />");
+                        praise_txt.removeClass("hover");
+                        $(text_box.children().get(0)).replaceWith("<em class='add-animation'>-1</em>");
+                        text_box.show();
+                        $(".add-animation").removeClass("hover");
+                        num -= 1;
+                        praise_txt.text(num);
+                    }
+                );
+            } else {
+                $ajax(
+                    "{:url('dream/upvote')}",
+                    {'dreamId': praise.attr("id")},
+                    false,
+                    function (res) {  //成功
+                        praise_img.replaceWith("<img src='__STATIC__/img/vote.png' class='praise-img' class='animation' />");
+                        praise_txt.addClass("hover");
+                        $(text_box.children().get(0)).replaceWith("<em class='add-animation'>+1</em>");
+                        text_box.show();
+                        $(".add-animation").addClass("hover");
+                        num += 1;
+                        praise_txt.text(num);
+                    }
+                );
+
+            }
         });
-
-        /* @author:yangqihua
-         * 动态点赞
-         * 此效果包含css3，部分浏览器不兼容（如：IE10以下的版本）
-         */
-        $(function () {
-            $("#dream_list").on('click', '.praise', function () {
-                var _this = $(this);
-                var praise = _this.parent().parent().parent();
-
-                var praise_img = $(_this.children().get(0));
-                var praise_txt = $(_this.children().get(1));
-                var text_box = $(_this.children().get(2));
-                var num = parseInt(praise_txt.text());
-                if (praise_img.attr("src") == ("__STATIC__/img/vote.png")) {
-                    $ajax(
-                        "{:url('dream/upvote')}",
-                        {'dreamId': praise.attr("id")},
-                        false,
-                        function (res) {  //成功
-                            praise_img.replaceWith("<img src='__STATIC__/img/unvote.png' class='praise-img' class='animation' />");
-                            praise_txt.removeClass("hover");
-                            $(text_box.children().get(0)).replaceWith("<em class='add-animation'>-1</em>");
-                            text_box.show();
-                            $(".add-animation").removeClass("hover");
-                            num -= 1;
-                            praise_txt.text(num);
-                        }
-                    );
-                } else {
-                    $ajax(
-                        "{:url('dream/upvote')}",
-                        {'dreamId': praise.attr("id")},
-                        false,
-                        function (res) {  //成功
-                            praise_img.replaceWith("<img src='__STATIC__/img/vote.png' class='praise-img' class='animation' />");
-                            praise_txt.addClass("hover");
-                            $(text_box.children().get(0)).replaceWith("<em class='add-animation'>+1</em>");
-                            text_box.show();
-                            $(".add-animation").addClass("hover");
-                            num += 1;
-                            praise_txt.text(num);
-                        }
-                    );
-
-                }
-            });
-        })
+    })
 </script>
 <!--{include file="public/tpl/bottom" /}-->
