--- a/application/index/view/public/tpl/header.html
+++ b/application/index/view/public/tpl/header.html
@@ -2,10 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
+    <meta http-equiv="Pragma" content="no-cache"/>
+    <meta http-equiv="Expires" content="0"/>
 
-    <!--<meta HTTP-EQUIV="Pragma" CONTENT="no-cache">-->
-    <!--<meta HTTP-EQUIV="Cache-Control" CONTENT="no-cache">-->
-    <!--<meta HTTP-EQUIV="Expires" CONTENT="0">-->
+    <meta content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
+    <meta content="yes" name="apple-mobile-web-app-capable">
+    <meta content="black" name="apple-mobile-web-app-status-bar-style">
+    <meta content="telephone=no" name="format-detection">
+    <meta content="email=no" name="format-detection">
 
     <title>[title]</title>
 
