--- a/application/index/view/user/index.html
+++ b/application/index/view/user/index.html
@@ -72,7 +72,7 @@
             </div>
         </a>
 
-        <a href="{:url('dream/sheet')}">
+        <a href="{:url('dream/warn')}">
             <div class="dream-me-item">
                 <div class="weui-row">
                     <div class="weui-col-50">
