--- a/application/index/view/index/register.html
+++ b/application/index/view/index/register.html
@@ -60,7 +60,7 @@
                     $.toast(res.message, 'cancel');
                 } else {
                     $.toast("注册成功", "success", function () {
-//                        location.href = "{:url('index/index')}";
+                        location.href = "{:url('index/index')}";
                     });
                 }
             },
