--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -52,6 +52,7 @@
             success: function (res) {
                 // console.log(res);
                 if (res.code == 500) {
+                    alert("用户名或密码错误");
                     // $.toast(res.message, 'cancel');
                 } else {
                     // $.toast("登录成功", "success", function () {
