--- a/application/index/view/dream/get_sheet_detail.html
+++ b/application/index/view/dream/get_sheet_detail.html
@@ -43,7 +43,7 @@
                     text: "编辑",
                     className: "color-primary",
                     onClick: function() {
-                        location.href = "{:url('dream/editDream')}?dreamId={$dream.id}";
+                        location.href = "{:url('dream/edit_dream')}?dreamId={$dream.id}";
                         //do something
                     }
                 },{
